<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oracle.cloud.mobile.demo.fixitfastcustomer.activity.LoginActivity"
    android:background="@color/fif_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_card"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/newUser"
                android:layout_marginTop="12dp"
                android:textStyle="bold"
                android:textColor="@color/fif_dkblue" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_username"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_firstName"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_lastName"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_address"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_city"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/prompt_postalCode"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="160dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>