<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oracle.cloud.mobile.demo.fixitfastcustomer.activity.LoginActivity"
    android:background="@color/fif_grey">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_card"
        android:padding="12dp">

        <TextView
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/welcome"
            android:textColor="@color/fif_dkblue"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:src="@drawable/fif_logo" />

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_marginBottom="16dp"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:text="fiflynn"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:text="123456"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fif_red"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:text="Login Error" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="160dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:text="@string/action_sign_in"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <Button
            style="@android:style/Widget.Holo.Light.Button.Small"
            android:id="@+id/register_button"
            android:layout_width="160dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/action_register" />

    </LinearLayout>

</LinearLayout>